
[gd_scene load_steps=5 format=3]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
script = ExtResource( 1 )

[node name="BotaoIniciar" type="Button" parent="."]
text = "Iniciar Jogo"

[node name="BotaoContinuar" type="Button" parent="."]
text = "Continuar"

[node name="BotaoResultados" type="Button" parent="."]
text = "Ver Resultados"

[node name="BotaoSair" type="Button" parent="."]
text = "Sair"
